force-app/main/default/objects/RH_eConsent_Document__e/RH_eConsent_Document__e.object-meta.xml
<CustomObject>
    <label>RH eConsent Document</label>
    <pluralLabel>RH eConsent Document</pluralLabel>
</CustomObject>