force-app/main/default/objects/RH_eConsent_Document__e/fields/Document_Consent_Method__c.field-meta.xml
<CustomField>
    <fullName>Document_Consent_Method__c</fullName>
    <label>Document Consent Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>