force-app/main/default/objects/RH_eConsent_Document__e/fields/Document_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Consent_Status__c</fullName>
    <label>Document Consent Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>