force-app/main/default/objects/RH_eConsent_Document__e/fields/Document_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Document_Identifier__c</fullName>
    <label>Document Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>