force-app/main/default/objects/RH_eConsent_Document__e/fields/Document_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Version_Number__c</fullName>
    <label>Document Version Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>