force-app/main/default/objects/RH_eConsent_Document__e/fields/Subject_Id__c.field-meta.xml
<CustomField>
    <fullName>Subject_Id__c</fullName>
    <label>Subject Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>