force-app/main/default/objects/RH_eConsent_Document__e/fields/System_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Document_Id__c</fullName>
    <label>System Document Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>